--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="index.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="board" id="board">
+      <div class="cell" data-cell id="0"></div>
+      <div class="cell" data-cell id="1"></div>
+      <div class="cell" data-cell id="2"></div>
+      <div class="cell" data-cell id="3"></div>
+      <div class="cell" data-cell id="4"></div>
+      <div class="cell" data-cell id="5"></div>
+      <div class="cell" data-cell id="6"></div>
+      <div class="cell" data-cell id="7"></div>
+      <div class="cell" data-cell id="8"></div>
+    </div>
+    <div class="winning-message" id="winningMessage">
+      <div data-winning-message-text></div>
+      <button id="restartButton">Restart</button>
+    </div>
+  </body>
 </html>
