--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   </head>
   <body>
     <div class="board" id="board">
-      <div class="cell" data-cell id="0"></div>
-      <div class="cell" data-cell id="1"></div>
-      <div class="cell" data-cell id="2"></div>
-      <div class="cell" data-cell id="3"></div>
-      <div class="cell" data-cell id="4"></div>
-      <div class="cell" data-cell id="5"></div>
-      <div class="cell" data-cell id="6"></div>
-      <div class="cell" data-cell id="7"></div>
-      <div class="cell" data-cell id="8"></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
     </div>
     <div class="winning-message" id="winningMessage">
       <div data-winning-message-text></div>
